feat(CI/CD): add Dockerfile & Jenkinsfile

--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-  "basePath": "/techradar",
+  "basePath": "/",
   "baseUrl": "",
   "editUrl": "https://git.vito.be",
   "logoFile": "logo.svg",
