--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "next lint",
     "fix": "prettier . --write",
     "prepare": "husky",
-    "postinstall": "npm run build:icons"
+    "postinstall": "yarn run build:icons"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
