--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "prettier": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "ts-node": "^10.9.2",
     "tsx": "^4.15.8",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
