--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint-staged": "^15.2.7",
     "marked": "^13.0.1",
     "marked-highlight": "^2.1.3",
-    "next": "14.2.4",
+    "next": "^15.1.7",
     "postcss-nested": "^6.0.1",
     "postcss-preset-env": "^9.5.14",
     "prettier": "^3.3.2",
@@ -45,5 +45,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "@next/third-parties": "^15.1.7"
   }
 }
